# oop_lab4

./: CMakeLists.txt  README.md
include/: dynamicArray.h  dynamicArray.ipp  figure.h  figure.ipp  hexagon.h  hexagon.ipp  octagon.h  octagon.ipp  pentagon.h  pentagon.ipp  point.h  point.ipp
src/: main.cpp
tests/: test.cpp
